2008-12-09  Chong Yidong  <cyd@stupidchicken.com>

	* files.el (save-some-buffers): At each map-y-or-n-p iteration,
	check whether the buffer is still alive.

2008-12-09  Stefan Monnier  <monnier@iro.umontreal.ca>

	* emacs-lisp/rx.el (rx-submatch): Pass : to rx-form.

2008-12-09  Glenn Morris  <rgm@gnu.org>

	* Makefile.in (ELCFILES): Update.

2008-12-08  Stefan Monnier  <monnier@iro.umontreal.ca>

	* autoinsert.el (auto-insert): Use expand-file-name instead of concat.
	Suggested by Eric Hanchrow <eric.hanchrow@gmail.com>.

2008-12-06  Chong Yidong  <cyd@stupidchicken.com>

	* term/xterm.el (terminal-init-xterm): Discard pending input
	before reading a reply to the terminal attributes query.

2008-12-05  Andreas Schwab  <schwab@suse.de>

	* dired.el (dired-font-lock-keywords): Fix last change.

2008-12-05  Vinicius Jose Latorre  <viniciusjl@ig.com.br>

	* ps-bdf.el (bdf-directory-list): Transform (defvar ... "*..")
	into (defcustom ... "..." :type ... :group...).

2008-12-05  Juanma Barranquero  <lekktu@gmail.com>

	* international/mule-diag.el (mule-diag): Display the window
	system version in a less laconic way.

2008-12-04  Juanma Barranquero  <lekktu@gmail.com>

	* ibuffer.el (ibuffer-sort-bufferlist): Require ibuf-ext
	if the sorting functions are not loaded.  (Bug#1432)

2008-12-04  Sam Steingold  <sds@gnu.org>

	* progmodes/compile.el (compilation-read-command): Extract from
	compile.
	(compile): Use it.
	(recompile): Accept an optional argument to enable editing the
	command line.

2008-12-04  Michael Albinus  <michael.albinus@gmx.de>

	* net/tramp.el (top): Write a message, when loading Tramp.

	* net/tramp-cache.el (tramp-dump-connection-properties):
	Polish the check, whether to dump the data.

2008-12-04  Lute Kamstra  <lute@gnu.org>

	* vc-cvs.el (vc-cvs-could-register): Don't use file-directory-p to
	check if the file "CVS/Entries" exists.

2008-12-04  Juanma Barranquero  <lekktu@gmail.com>
